[package]
name = "simple-database"
version = "1.2.0"
edition = "2021"
description = "A rust crate for simple Key-Value Stores and a simple Indexed Database"
license = "BSD-3-Clause"
repository = "https://github.com/CalebCouch/simple-database.git"

[dependencies]
hex = "0.4.3"
serde_json = "1.0.128"
thiserror = "1.0.64"
dyn-clone = "1.0.17"
serde = { version = "1.0.210", features = ["derive"] }
uuid = {version="1.10.0", features = ["v4", "serde"]}
chrono = "0.4.38"

rusqlite = {version="0.28.0", optional=true, features = ["bundled"]}
async-trait = "0.1.83"
tokio = {version="1.41.1", features = ["sync"]}

[features]
rusqlite = ["dep:rusqlite"]
